crates/mlir-rs/src/dialect/snapshots/mlir_rs__dialect__arith__tests__arith.constant.snap
---
source: crates/mlir-rs/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: i64) -> i64 {
    %c42_i64 = arith.constant 42 : i64
    return %c42_i64 : i64
  }
}
