crates/mlir-rs/src/dialect/snapshots/mlir_rs__dialect__arith__tests__arith.sitofp.snap
---
source: crates/mlir-rs/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: i32) -> f64 {
    %0 = arith.sitofp %arg0 : i32 to f64
    return %0 : f64
  }
}
