crates/mlir-rs/src/dialect/snapshots/mlir_rs__dialect__arith__tests__compile_select.snap
---
source: crates/mlir-rs/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: i1, %arg1: i64, %arg2: i64) -> i64 {
    %0 = arith.select %arg0, %arg1, %arg2 : i64
    return %0 : i64
  }
}
